Added order to db

--- a/RecipeProjectMVC/appsettings.json
+++ b/RecipeProjectMVC/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Recipe;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ContextConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Recipe;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Recipe;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
